--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,14 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.0-alpha2</version>
-            <scope>compile</scope>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.0</version>
         </dependency>
+
+
 
     </dependencies>
 
